// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleField rendering renders expected elements 1`] = `
<div
  className="ToggleField"
>
  <div>
    <Label
      htmlFor="test"
      text="Test"
    />
  </div>
  <Toggle
    aria-label="Test"
    checked={true}
    className="ToggleField__field"
    id="test"
    onChange={[Function]}
  />
</div>
`;

exports[`ToggleField rendering renders expected elements when className is set 1`] = `
<div
  className="ToggleField TestClass"
>
  <div>
    <Label
      htmlFor="test"
      text="Test"
    />
  </div>
  <Toggle
    aria-label="Test"
    checked={true}
    className="ToggleField__field"
    id="test"
    onChange={[Function]}
  />
</div>
`;
